# gmail-du

./: .gitignore  README.md  analyzer.py  auth.py  main.py  pyproject.toml  requirements.txt  scanner.py  storage.py  tui.py
tests/: test_analyzer.py  test_storage.py
